--- a/src/scss/jeet/_functions.scss
+++ b/src/scss/jeet/_functions.scss
@@ -1,25 +1,13 @@
-/**
- * List functions courtesy of the wonderful folks at Team Sass.
- * Check out their awesome grid: Singularity.
- */
+// List functions courtesy of Team Sass.
 
-/**
- * Get  percentage from a given ratio.
- * @param {number} [$ratio=1] - The column ratio of the element.
- * @returns {number} - The percentage value.
- */
-@function jeet-get-span($ratio: 1) {
+// Get  percentage from a given ratio.
+@function _get-span($ratio: 1) {
   @return $ratio * 100;
 }
 
-/**
- * Work out the column widths based on the ratio and gutter sizes.
- * @param {number} [$ratios=1] - The column ratio of the element.
- * @param {number} [$gutter=$jeet-gutter] - The gutter for the column.
- * @returns {list} $width $gutter - A list containing the with and gutter for the element.
- */
-@function jeet-get-column($ratios: 1, $gutter: $jeet-gutter) {
-  $ratios: if(not $jeet-parent-first, jeet-reverse($ratios), $ratios);
+// Work out the column widths based on the ratio and gutter sizes.
+@function _get-column($ratios: 1, $gutter: map-get($jeet, 'gutter')) {
+  $ratios: if(not map-get($jeet, 'parent-first'), _reverse($ratios), $ratios);
   $width: 100;
 
   @each $ratio in $ratios {
@@ -30,27 +18,17 @@
   @return $width $gutter;
 }
 
-/**
- * Get the set layout direction for the project.
- * @returns {string} $direction - The layout direction.
- */
-@function jeet-get-layout-direction() {
-  $direction: if($jeet-layout-direction == "RTL", right, left);
+// Get the set layout direction for the project.
+@function _get-layout-direction() {
+  $direction: if(map-get($jeet, 'layout-direction') == 'RTL', right, left);
 
   @return $direction;
 }
 
-/**
- * Replace a specified list value with a new value (uses built in set-nth() if available)
- * @param {list} $list - The list of values you want to alter.
- * @param {number} $index - The index of the list item you want to replace.
- * @param {*} $value - The value you want to replace $index with.
- * @returns {list} $list - The list with the value replaced or removed.
- * @warn if an invalid index is supplied.
- */
-@function jeet-replace-nth($list, $index, $value) {
+// Replace a specified list value with a new value (uses built in set-nth() if available)
+@function _replace-nth($list, $index, $value) {
   // Fallback for Sass 3.2
-  @if function-exists("set-nth") != true {
+  @if function-exists('set-nth') != true {
     $result: ();
     $index: if($index < 0, length($list) + $index + 1, $index);
 
@@ -67,14 +45,10 @@
   @return $result;
 }
 
-/**
- * Reverse a list (progressively enhanced for Sass 3.3)
- * @param {list} $list - The list of values you want to reverse.
- * @returns {list} $result - The reversed list.
- */
-@function jeet-reverse($list) {
+// Reverse a list (progressively enhanced for Sass 3.3)
+@function _reverse($list) {
   // Sass 3.2
-  @if function-exists("set-nth") != true {
+  @if function-exists('set-nth') != true {
     $result: ();
 
     @for $i from length($list) * -1 through -1 {
@@ -94,27 +68,22 @@
   @return $list;
 }
 
-/**
- * Get the opposite direction to a given value.
- * @param {string} $dir - The direction you want the opposite of.
- * @returns {string} - The opposite direction to $dir.
- * @warn if an incorrect string is provided.
- */
-@function jeet-opposite-direction($direction) {
-  @if $direction == "left" {
+// Get the opposite direction to a given value.
+@function _opposite-direction($direction) {
+  @if $direction == 'left' {
     @return right;
-  } @else if $direction == "right" {
+  } @else if $direction == 'right' {
     @return left;
-  } @else if $direction == "top" {
+  } @else if $direction == 'top' {
     @return bottom;
-  } @else if $direction == "bottom" {
+  } @else if $direction == 'bottom' {
     @return top;
-  } @else if index("ltr" "LTR", $direction) {
+  } @else if index('ltr' 'LTR', $direction) {
     @return rtl;
-  } @else if index("rtl" "RTL", $direction) {
+  } @else if index('rtl' 'RTL', $direction) {
     @return ltr;
   } @else {
-    @warn "`#{$direction}` is not a direction; please make sure your direction is all lowercase.";
+    @warn '`#{$direction}` is not a direction; please make sure your direction is all lowercase.';
     @return false;
   }
 }
