--- a/src/scss/jeet/_settings.scss
+++ b/src/scss/jeet/_settings.scss
@@ -1,9 +1,6 @@
-/**
- * Grid settings.
- * All values are defaults and can therefore be easily overidden.
- */
-
-$jeet-gutter:           3      !default;
-$jeet-parent-first:     false  !default;
-$jeet-layout-direction: "LTR"  !default;
-$jeet-max-width:        1410px !default;
+$jeet: (
+  gutter: 3,
+  max-width: 1440px,
+  layout-direction: LTR,
+  parent-first: false
+);
