--- a/src/scss/partials/_fonts.scss
+++ b/src/scss/partials/_fonts.scss
@@ -1,3 +1,9 @@
 // TODO: fix up.
-$font-header: cursive;
+$font-size-root: 1em;
+
+$font-header: 'Cinzel', cursive;
 $font-body:   sans-serif;
+
+$font-size-header-1: 4rem;
+$font-size-header-2: 3.2rem;
+$font-size-body: 1rem;
