--- a/src/scss/core.scss
+++ b/src/scss/core.scss
@@ -21,6 +21,23 @@ body {
   font-family: $font-body;
 }
 
+h1,
+h2 {
+  font-family: $font-header;
+  margin: 0;
+  white-space: nowrap;
+}
+
+h1 {
+  @include scale(font-size, $font-size-header-1);
+}
+
+h2 {
+  @include scale(font-size, $font-size-header-2);
+
+  font-weight: normal;
+}
+
 a {
   color: $color-link;
   text-decoration: none;
@@ -28,6 +45,10 @@ a {
   &:active {
     color: $color-link-active;
   }
+}
+
+.wrapper {
+  overflow-x: hidden;
 }
 
 .container {
