--- a/src/scss/partials/_colors.scss
+++ b/src/scss/partials/_colors.scss
@@ -3,10 +3,11 @@ $color-circus-red:    rgb(189, 45, 8);
 $color-circus-yellow: rgb(228, 207, 72);
 $color-night-sky:     rgb(36, 41, 53);
 $color-shadow:        rgba(0, 0, 0, .2);
+$color-about:         rgb(0, 153, 102);
 
 // TODO: fix up.
 // Text colours:
-$color-dark-text:   rgb(0, 0, 0);
+$color-dark-text:   rgb(36, 41, 53);
 $color-light-text:  rgb(255, 255, 255);
 $color-link:        rgb(0, 100, 200);
 $color-link-active: rgb(100, 50, 200);
