--- a/src/scss/partials/_colors.scss
+++ b/src/scss/partials/_colors.scss
@@ -1,5 +1,6 @@
 // Block colours:
 $color-circus-red:    rgb(189, 45, 8);
+$color-deep-red:      rgb(177, 41 ,3);
 $color-circus-yellow: rgb(228, 207, 72);
 $color-night-sky:     rgb(36, 41, 53);
 $color-shadow:        rgba(0, 0, 0, .2);
