--- a/src/scss/partials/_fonts.scss
+++ b/src/scss/partials/_fonts.scss
@@ -2,7 +2,7 @@
 $font-size-root: 1em;
 
 $font-header: 'Cinzel', cursive;
-$font-body:   sans-serif;
+$font-body:   'Arima Madurai', serif;
 
 $font-size-header-1: 4rem;
 $font-size-header-2: 3.2rem;
