--- a/src/scss/partials/_colors.scss
+++ b/src/scss/partials/_colors.scss
@@ -1,14 +1,17 @@
 // Block colours:
-$color-circus-red:    rgb(189, 45, 8);
-$color-deep-red:      rgb(177, 41 ,3);
-$color-circus-yellow: rgb(228, 207, 72);
-$color-night-sky:     rgb(36, 41, 53);
-$color-shadow:        rgba(0, 0, 0, .2);
-$color-about:         rgb(0, 153, 102);
+$color-circus-red:     rgb(189, 45, 8);
+$color-deep-red:       rgb(177, 41, 3);
+$color-circus-yellow:  rgb(228, 207, 72);
+$color-night-sky:      rgb(36, 41, 53);
+$color-shadow:         rgba(0, 0, 0, .2);
+$color-about:          rgb(0, 153, 102);
+$color-ticketing:      rgb(246, 208, 146);
+$color-ents:           rgb(0, 153, 102);
 
 // TODO: fix up.
 // Text colours:
-$color-dark-text:   rgb(36, 41, 53);
+$color-dark-text:   rgb(16, 21, 33);
+$color-medium-text: rgb(60, 70, 80);
 $color-light-text:  rgb(255, 255, 255);
 $color-link:        rgb(0, 100, 200);
 $color-link-active: rgb(100, 50, 200);
