More general styling and animation.

--- a/src/scss/includes/_hamburger.scss
+++ b/src/scss/includes/_hamburger.scss
@@ -4,7 +4,7 @@
   width: 2rem;
 
   .bar {
-    background-color: $color-light-text;
+    background-color: $color-white-text;
     box-sizing: border-box;
     height: .2rem;
     transition: 300ms;
