--- a/src/scss/core.scss
+++ b/src/scss/core.scss
@@ -12,7 +12,10 @@
 @import 'includes/about';
 @import 'includes/hamburger';
 @import 'includes/ticketing';
+@import 'includes/workers';
 @import 'includes/ents';
+@import 'includes/sponsorship';
+@import 'includes/charities';
 @import 'includes/footer';
 
 html,
@@ -22,11 +25,24 @@ body {
 
 body {
   background-color: $color-night-sky;
-  color: $color-light-text;
+  color: $color-white-text;
   font-family: $font-body;
+
+  // Preload css backgrounds.
+  &::after {
+    content: url('../img/ticket_machine-01.svg')
+             url('../img/ticket_machine-02.svg')
+             url('../img/ticket_machine-03.svg');
+    height: 0;
+    overflow: hidden;
+    position: absolute;
+    width: 0;
+    z-index: -1;
+  }
 }
 
-section, footer {
+section,
+footer {
   padding: 5rem 2rem;
   z-index: 0;
 }
