--- a/src/scss/partials/_colors.scss
+++ b/src/scss/partials/_colors.scss
@@ -1,17 +1,18 @@
 // Block colours:
-$color-circus-red:     rgb(189, 45, 8);
 $color-deep-red:       rgb(177, 41, 3);
-$color-circus-yellow:  rgb(228, 207, 72);
 $color-night-sky:      rgb(36, 41, 53);
 $color-shadow:         rgba(0, 0, 0, .2);
 $color-about:          rgb(0, 153, 102);
 $color-ticketing:      rgb(246, 208, 146);
+$color-workers:        rgb(0, 104, 66);
 $color-ents:           rgb(0, 153, 102);
+$color-sponsorship:    rgb(228, 207, 72);
+$color-charities:      rgb(220, 41, 3);
 
-// TODO: fix up.
 // Text colours:
 $color-dark-text:   rgb(16, 21, 33);
-$color-medium-text: rgb(60, 70, 80);
-$color-light-text:  rgb(255, 255, 255);
+$color-medium-text: rgb(55, 65, 75);
+$color-light-text:  rgb(240, 210, 210);
+$color-white-text:  rgb(250, 250, 250);
 $color-link:        rgb(0, 100, 200);
 $color-link-active: rgb(100, 50, 200);
