--- a/src/scss/includes/_ents.scss
+++ b/src/scss/includes/_ents.scss
@@ -1,4 +1,46 @@
 #ents {
   background-color: $color-ents;
   color: $color-dark-text;
+
+  .cannon {
+    background-image: url('../img/cannon.svg');
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    background-size: contain;
+    height: 12rem;
+    width: 100%;
+
+    @media (min-width: $media-width-small) {
+      float: right;
+      width: 15rem;
+    }
+
+    @media (min-width: $media-width-large) {
+      height: 16rem;
+      margin-right: -8rem;
+      padding-right: 8rem;
+      width: 12rem;
+    }
+  }
+
+  .ball {
+    background-image: url('../img/ball.svg');
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    background-size: contain;
+    height: 10rem;
+    width: 100%;
+
+    @media (min-width: $media-width-small) {
+      float: left;
+      width: 11.54rem;
+    }
+
+    @media (min-width: $media-width-large) {
+      height: 12rem;
+      margin-left: -7rem;
+      padding-left: 7rem;
+      width: 6.85rem;
+    }
+  }
 }
