--- a/src/scss/partials/_colors.scss
+++ b/src/scss/partials/_colors.scss
@@ -8,6 +8,7 @@ $color-workers:        rgb(0, 104, 66);
 $color-ents:           rgb(0, 153, 102);
 $color-sponsorship:    rgb(228, 207, 72);
 $color-charities:      rgb(220, 41, 3);
+$color-sponsor-bar:    rgb(242, 169, 0);
 
 // Text colours:
 $color-dark-text:   rgb(16, 21, 33);
