--- a/src/scss/includes/_header.scss
+++ b/src/scss/includes/_header.scss
@@ -1,4 +1,27 @@
 header {
+  .stars {
+    background-image: radial-gradient(1px 1px at 10% 15%, $color-star 99%, transparent 100%),
+                      radial-gradient(1px 1px at 20% 35%, $color-star 99%, transparent 100%),
+                      radial-gradient(1px 1px at 25% 80%, $color-star 99%, transparent 100%),
+                      radial-gradient(1px 1px at 45% 20%, $color-star 99%, transparent 100%),
+                      radial-gradient(1px 1px at 65% 40%, $color-star 99%, transparent 100%),
+                      radial-gradient(1px 1px at 84% 70%, $color-star 99%, transparent 100%);
+    background-position: center top;
+    background-repeat: repeat;
+    background-size: 20rem 18rem;
+
+    height: 60vh;
+    left: 0;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: -1;
+
+    &.finished {
+      position: absolute;
+    }
+  }
+
   .moon {
     @include scale(width, 5rem, .6);
     @include scale(height, 5rem, .6);
