--- a/src/scss/partials/_colors.scss
+++ b/src/scss/partials/_colors.scss
@@ -9,6 +9,7 @@ $color-ents:           rgb(0, 153, 102);
 $color-sponsorship:    rgb(228, 207, 72);
 $color-charities:      rgb(220, 41, 3);
 $color-sponsor-bar:    rgb(242, 169, 0);
+$color-star:           rgba(255, 255, 255, .5);
 
 // Text colours:
 $color-dark-text:   rgb(16, 21, 33);
